Cascading Change Log

unreleased

  Fixed bug in c.u.Util#join() methods where if the first value was empty, the delimiter was not properly applied.

  Fixed issue in c.t.h.FSDigestOutputStream where seek() now must be implemented with modern versions of Hadoop.

1.0.14

  Fixed bug in planner where JGraphT sometimes returns null instead of an empty List.

  Fixed bug in c.o.x.XPathParser that prevented use of multiple xpath expressions.

  Added configuration propety allowing job polling interval to be configured per c.f.Flow via
  Flow#setJobPollingInterval().

  Updated ant build to not hard-code hadoop/lib sub-dir names.

1.0.13

  Fixed bug where non-String j.u.Property values where not being copied to the internal o.a.h.m.JobConf instance.

  Fixed bug where custom serializations where not recognized during co-grouping spills inside c.t.SpillableTupleList.

1.0.12

  Fixed bug where the c.f.FlowPlanner did not detect that tails were not bound to sinks, or that some tail references
  were missing.

  Fixed j.u.ConcurrentModificationException when using a c.c.CascadeConnector on c.f.Flows using a c.t.MultiSink
  c.t.Tap.

  Fixed bug where c.f.s.StackException was being wrapped preventing failures within sink c.t.Tap instances from
  causing the c.f.Flow to fail. This mainly affected Flows using traps.

1.0.11

  Added clearer error message when c.t.Tap is used as both source and sink in a given Flow.

  Demoted all DEBUG related c.t.Tuple#print() calls to TRACE.

  Fixed NPE when planner finds inconsistencies with c.t.Tap and c.p.Pipe names.

1.0.10

  Updated planner error messages when field name collisions detected.

  Fixed issue where temporary paths were not getting deleted consistently.

1.0.9

  Fixed issue where reverse ordering a c.p.GroupBy was not possible when sortFields were not given.

  Changed c.f.s.StackElement#close() behavior to close elements from the top of the stack.

1.0.8
